    level instead of the predicate level. Although this feature could be
    helpful when debugging grammar rules, it complicated the integration of
    Logtalk with Prolog-native development tools.

    Updated the Logtalk compiler in order to save the entity clause locations
    and make this information available to the back-end Prolog compilers.

    Updated the Logtalk compilers in order to avoid generating unnecessary
    internal catchall clauses for the predicate declaration and definition
    tables for dynamic entities.

    Updated the Logtalk compiler in order to preclude using multifile
    predicates for breaking object encapsulation. In addition, defining
    clauses for a multifile Entity::Functor/Arity without a corresponding
    multifile/1 directive will now result in a compilation error instead
    of simply a warning.

    When debugging messages specified in uses/2 directives, the message is now
    printed implicitly qualified as in the source code written by the user.

    Changed the internal predicates used in the implementation of the built-in
    multi-threading predicates in order to facilitate the integration with
    high-level debugging tools that require decompilation of the generated
    Prolog code.

    Corrected a bug introduced in Logtalk 2.42.4 on the compilation of entity
    predicates that call synchronized predicates. This bug resulted in calls
    being made instead to the non-synchronized forms of the predicates, which
    would manifest in random failures of thread goals.

    Updated the SWI-Prolog config file in order to avoid preventing loading
    of a Logtalk source file when a Prolog file with the same name exists on
    the same lookup directory. In addition, add source location information
    to the generated Prolog files resulting from the compilation of Logtalk
    source files. This location information is necessary for supporting some
    of the SWI-Prolog development tools.
